Added updated link and Description
Added updated link and description for my redisng site. Down in my "work" section.

--- a/index.html
+++ b/index.html
@@ -165,12 +165,13 @@
                     and YouTube.</p>
             </div>
             <div class="col-sm-6 my-3">
-                <a href="discography/Discography_github/index-non.php">
+                <a href="http://site13.wdd.francistuttle.edu/discography/Discography_github/index-non.html">
                 <img src="images/revamp.png" class="img-fluid rounded"
                      alt="revamp"></a>
-                <h1 class="my-3">PHP Revamp Website</h1>
-                <p class="text-muted">COMING SOON<br>
-                    <strong>Skills:</strong> FTP, HTML, CSS, Photoshop, PHP, MySQL
+                <h1 class="my-3">Discography Redesign Website</h1>
+                <p class="text-muted">This was a peers discography website that was given to 
+                    me to redesign using my newly learned skills.<br>
+                    <strong>Skills:</strong> FTP, HTML, CSS, Javascript, Github, Sketch, Photoshop
                     and YouTube.</p>
             </div>
         </div>
