--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
             </div>
             <div class="col-12 col-sm-6 mx-auto my-5">
                 <h1 class="text-dark text-uppercase">Yobani Mendoza</h1>
-                <p class="text-dark text-uppercase">Hello, I’m a current web development student at Francis Tuttle Technology Center in Oklahoma City, OK. </p>
+                <p class="text-dark text-uppercase">Hello, I’m a current front end web development student at Francis Tuttle Technology Center in Oklahoma City, OK. </p>
                 <a href="https://www.linkedin.com/in/yobani-mendoza-368716122/
                         " class="btn btn-lg
                   btn-outline-dark text-uppercase
